course_project progress

--- a/Course_Project/Model_Data_Cleaning.Rmd
+++ b/Course_Project/Model_Data_Cleaning.Rmd
@@ -62,23 +62,24 @@ model_data$Company_Creation_Date <- dmy_hms(model_data$Company_Creation_Date)
 
 merge_Data <- merge(model_data, firm_Data, by.x = 'Company_Number', by.y = 'Company_Number')
 
-model_Variables <- c("Business_Code", "Location_Type", "churned", "total_products", "total_transactions", "total_accounts", "total_revenue", "total_usage", "Employee_Count_Total", "Company_Number", "Public_Private_Indicator", "Small_Business_Indicator", "Minority_Owned_Indicator", "Major_Industry_Category_Name", "Legal_Status_Code", "Import_Export_Agent_Code", "Population_Code", "Number_of_Family_Members", "Status_Code", "Subsidiary_Indicator", "Manufacturing_Indicator")
+model_Variables <- c("Business_Code", "Location_Type", "churned", "total_products", "total_transactions", "total_accounts", "total_revenue", "total_usage", "Employee_Count_Total", "Company_Number", "Public_Private_Indicator", "Major_Industry_Category_Name", "Legal_Status_Code", "Import_Export_Agent_Code", "Population_Code", "Number_of_Family_Members", "Manufacturing_Indicator")
+
+merge_Data$Manufacturing_Indicator <- as.factor(merge_Data$Manufacturing_Indicator)
 
 merge_Data_subset <- subset(merge_Data, select = model_Variables)
 
 merge_Data_subset <- merge_Data_subset %>% mutate_all(na_if, "")
 
-
 merge_Data_subset <- merge_Data_subset %>% 
   mutate(Legal_Status_Code = case_when(
     Legal_Status_Code == 3 ~ "corporation",
-    Legal_Status_Code == 8 ~ "joint venture",
-    Legal_Status_Code == 12 ~ "partnership of unknown type",
+    Legal_Status_Code == 8 ~ "joint_venture",
+    Legal_Status_Code == 12 ~ "partnership_of_unknown_type",
     Legal_Status_Code == 13 ~ "proprietorship",
-    Legal_Status_Code == 50 ~ "government body",
+    Legal_Status_Code == 50 ~ "government_body",
     Legal_Status_Code == 100 ~ "cooperative",
-    Legal_Status_Code == 101 ~ "non profit organization",
-    Legal_Status_Code == 118 ~ "local government body",
+    Legal_Status_Code == 101 ~ "non_profit_organization",
+    Legal_Status_Code == 118 ~ "local_government_body",
     Legal_Status_Code == 120 ~ "foreign company",
     TRUE ~ "Other"
   )
@@ -87,55 +88,34 @@ merge_Data_subset <- merge_Data_subset %>%
 merge_Data_subset <- merge_Data_subset %>% 
   mutate(Import_Export_Agent_Code = case_when(
     Import_Export_Agent_Code == "A" ~ "Import/Export/Agent",
-    Import_Export_Agent_Code == "B" ~ "Imports & Exports",
+    Import_Export_Agent_Code == "B" ~ "Imports_&_Exports",
     Import_Export_Agent_Code == "C" ~ "Imports",
-    Import_Export_Agent_Code == "D" ~ "Imports & Agent",
-    Import_Export_Agent_Code == "E" ~ "Exports & Agent",
-    Import_Export_Agent_Code == "F" ~ "Agent - keeps no inventory and does not take title goods",
-    Import_Export_Agent_Code == "G" ~ " None or Not Available",
+    Import_Export_Agent_Code == "D" ~ "Imports_&_Agent",
+    Import_Export_Agent_Code == "E" ~ "Exports_&_Agent",
+    Import_Export_Agent_Code == "F" ~ "Agent",
+    Import_Export_Agent_Code == "G" ~ " None_or_Not_Available",
     Import_Export_Agent_Code == "H" ~ "Exports",
     TRUE ~ "None or Not Available"
   )
 )
 
 merge_Data_subset <- merge_Data_subset %>% 
-  mutate(Status_Code = case_when(
-    Status_Code == 0 ~ "Single Location",
-    Status_Code == 1 ~ "Headquarter/Parent",
-    Status_Code == 2 ~ "Branch"
-  )
-)
-
-merge_Data_subset <- merge_Data_subset %>% 
   mutate(Population_Code = case_when(
-    Population_Code == 0 ~ "Under 1,000",
-    Population_Code == 1 ~ "1,000 to 2,499",
-    Population_Code == 2 ~ "2,500 to 4,999",
-    Population_Code == 3 ~ "5,000 to 9,999",
-    Population_Code == 4 ~ "10,000 to 24,999",
-    Population_Code == 5 ~ "25,000 to 49,999",
-    Population_Code == 6 ~ "50,000 to 99,999",
-    Population_Code == 7 ~ "100,000 to 249,999",
-    Population_Code == 8 ~ "250,000 to 499,999",
-    Population_Code == 9 ~ "500,000 and over"
+    Population_Code == 0 ~ "Under_1,000",
+    Population_Code == 1 ~ "1,000_to_2,499",
+    Population_Code == 2 ~ "2,500_to_4,999",
+    Population_Code == 3 ~ "5,000_to_9,999",
+    Population_Code == 4 ~ "10,000_to_24,999",
+    Population_Code == 5 ~ "25,000_to_49,999",
+    Population_Code == 6 ~ "50,000_to_99,999",
+    Population_Code == 7 ~ "100,000_to_249,999",
+    Population_Code == 8 ~ "250,000_to_499,999",
+    Population_Code == 9 ~ "500,000_and_over"
   )
 )
 
 
-merge_Data_subset <- merge_Data_subset %>% 
-  mutate(Subsidiary_Indicator = case_when(
-    Subsidiary_Indicator == 0 ~ "N",
-    Subsidiary_Indicator == 3 ~ "Y"
-  )
-)
-
-merge_Data_subset <- merge_Data_subset %>% 
-  mutate(Manufacturing_Indicator = case_when(
-    Manufacturing_Indicator == 0 ~ "Y",
-    Manufacturing_Indicator == 1 ~ "N"
-  )
-)
-
+names(merge_Data_subset) <- make.names(names(merge_Data_subset))
 
 ```
 
@@ -153,7 +133,7 @@ for(Var in colnames(merge_Data_subset_nonNUM)) {
   
 }
 
-(high_Correlation <- findCorrelation(cor(merge_Data_subset_NUM)))
+#(high_Correlation <- findCorrelation(cor(merge_Data_subset_NUM)))
 
 
 # Use preProcess to imput missing values using KNN model, **May automatically apply centering and scaling?
