--- a/Course_Project/models_RandomForest_GradientBoosting.Rmd
+++ b/Course_Project/models_RandomForest_GradientBoosting.Rmd
@@ -26,7 +26,8 @@ dataset <- model_data_bagImputed
 
 target_var <- "churned"
 
-model_form <- churned ~ .
+model_form <- churned ~ . -Company_Number
+
 model_type <- 'rf'
 
 positive_class <- 'Yes'
@@ -80,13 +81,34 @@ roc(data_test[[target_var]], rf_tree_churn_pred_probs[ , positive_class], plot =
 
 model_type <- 'xgbTree'
 
+trControl <- trainControl(method = 'cv', number = 10, savePredictions = TRUE, classProbs = TRUE, sampling = "smote", search = 'grid')
+
+tGrid <- expand.grid(nrounds = seq(10,100,10),
+                   max_depth = c(1, 3, 5, 7),
+                   eta = c(0.001,0.01,0.1),
+                   gamma = c(0),
+                   colsample_bytree = c(1),
+                   min_child_weight = c(1),
+                   subsample = c(1))
+
 xgb_churn_tree <- train(as.formula(model_form), data = data_train, method = model_type, trControl = trControl, metric = 'ROC')
 
+xgb_churn_tree_smote <- train(as.formula(model_form), data = data_train, method = model_type, trControl = trControl, metric = 'ROC')
+
+xgb_churn_tree$finalModel
+
 # get training data predictions
+xgb_churn_tree_smote_predictions <- xgb_churn_tree_smote$pred
+
+# evaluate predictions
+confusionMatrix(xgb_churn_tree_smote_predictions$pred, xgb_churn_tree_smote_predictions$obs)
+
 xgb_churn_tree_predictions <- xgb_churn_tree$pred
 
 # evaluate predictions
 confusionMatrix(xgb_churn_tree_predictions$pred, xgb_churn_tree_predictions$obs)
+
+roc(xgb_churn_tree_smote_predictions$obs, xgb_churn_tree_smote_predictions$Yes, plot = TRUE, print.auc = TRUE, legacy.axes = TRUE, levels = c(negative_class, positive_class))$auc
 
 roc(xgb_churn_tree_predictions$obs, xgb_churn_tree_predictions$Yes, plot = TRUE, print.auc = TRUE, legacy.axes = TRUE, levels = c(negative_class, positive_class))$auc
 
